fix: check isMember logic